# codevul

./: .gitignore  AGENTS.md  README.md  README.old.md  count_cwe.py  cvefix_readme.md  example.jsonc  example.yaml  filter_benchmark.py  json_to_jsonl.py  main.py  pyproject.toml  run.py
config/: pipeline.yaml  review_config.yaml  并发与并行.yaml  输入校验.yaml
docs/: PIPELINE.md
scripts/: analyze_cwe.py  analyze_cwe_stats.py  analyze_jsonl_cwe.py  build_note_dataset.py  category_summary.py  check_filtered_samples.py  clean_duplicates.py  clean_review_message.py  cluster_benchmark.py  create_benchmark.py  cwe_stats.py  fetch_missing_lines.py  filter_empty_lines.py  filter_existing_benchmark.py  generate_collect_progress.py  generate_reviews.py  generate_yaml_stats.py  normalize_datasets.py  optimize_benchmark.py  signatures.py  transform_benchmark.py
src/: __init__.py  cli.py  client.py  signature.py
src/cleaning/: __init__.py  base.py  code_validator.py  cwe_filter.py  deduplicator.py  language_filter.py  url_validator.py
src/dataset/: __init__.py  common.py  crossvul.py  cvefixes.py  jacontebe.py  juliet.py  megavul.py  msr.py  primevul.py  sven.py
src/pipeline/: __init__.py  clean.py  normalize.py  orchestrator.py  sample.py  transform.py
src/review/: __init__.py  code_optimizer.py  cwe_enricher.py  diff_generator.py  generator.py  prompter.py  validator.py
src/transform/: __init__.py  clustering.py  code_extractor.py  comment_remover.py  cve_extractor.py  function_counter.py  review_cleaner.py  transformer.py
tests/: __init__.py  conftest.py
(+20 files in other folders)
